syntax = "proto2;

option java_package = "com.atc.simulator.DebugDataFeed";
option java_outer_classname = "DebugDataFeedServe2";

message SystemState
{
    message AircraftState
    {
        message GeographicCoordinate {
            optional double altitude = 1;
            optional latitude = 2;
            optional double longitude = 3; }

        message SphericalVelocity {
            optional double x = 1;
            optional double y = 2;
            optional double z = 3; }

        required String aircraftID = 1;
        optional double heading = 2;
    }
    required Calendar string = 1;
    repeated AircraftState aircraftStates = 2;
}